Bug 151993 - The decimal comma in table formulas always changes from comma to point, resulting broken formula in documents where document locale (language) has default decimal comma
Summary: The decimal comma in table formulas always changes from comma to point, resul...
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
7.5.0.0 alpha0+
Hardware: All All
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:7.5.0 target:7.4.4
Keywords: bibisectRequest, filter:docx, regression
Depends on:
Blocks: DOCX-Tables
  Show dependency treegraph
 
Reported: 2022-11-10 11:52 UTC by NISZ LibreOffice Team
Modified: 2022-11-28 07:54 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments
File for testing the bug (21.18 KB, application/vnd.openxmlformats-officedocument.wordprocessingml.document)
2022-11-10 11:53 UTC, NISZ LibreOffice Team
Details

Note You need to log in before you can comment on or make changes to this bug.
Description NISZ LibreOffice Team 2022-11-10 11:52:32 UTC
Description:
When I save as docx an opened docx document with number cells in a table. And open it again, the thousands separator changes from comma to point.


Steps to Reproduce:
1. Open the attached file
2. Save as another docx document
3. Open the saved docx file

Actual Results:
The last column ("Actual Result") separator changes from comma to point.

Expected Results:
The separator does not change. It remains comma.


Reproducible: Always


User Profile Reset: No

Additional Info:
Version: 7.5.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 3c0be5564afe1b9cc843a49aba88b72af74c43ab
CPU threads: 8; OS: Windows 10.0 Build 19044; UI render: Skia/Vulkan; VCL: win
Locale: hu-HU (hu_HU); UI: en-US
Calc: CL threaded
Comment 1 NISZ LibreOffice Team 2022-11-10 11:53:25 UTC
Created attachment 183517 [details]
File for testing the bug
Comment 2 László Németh 2022-11-12 12:07:59 UTC
Regression from commit 94bf4908a6661101c270ef647e33dde09f16ac08
"tdf#148799 DOCX import: fix invalid formulas with comma"
Comment 3 Commit Notification 2022-11-14 08:31:12 UTC
László Németh committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/c6688def010fcb6854c6d896efe7186ff6c63475

tdf#151993 DOCX import: convert decimal comma only if needed

It will be available in 7.5.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 4 Commit Notification 2022-11-14 12:34:15 UTC
László Németh committed a patch related to this issue.
It has been pushed to "libreoffice-7-4":

https://git.libreoffice.org/core/commit/42baf73137d1776618af5d7c7406bac86ebeb63c

tdf#151993 DOCX import: convert decimal comma only if needed

It will be available in 7.4.4.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 5 NISZ LibreOffice Team 2022-11-28 07:54:02 UTC
Verified in:
Version: 7.5.0.0.alpha1+ (X86_64) / LibreOffice Community
Build ID: 5b18eebc2c95321ce7e6edf10f4df81557382a48
CPU threads: 4; OS: Windows 10.0 Build 19044; UI render: Skia/Vulkan; VCL: win
Locale: hu-HU (hu_HU); UI: en-US
Calc: CL threaded