tdf#151993 DOCX import: convert decimal comma only if needed

E.g. convert en_US document with decimal comma, but not
de_DE document with decimal comma.

Regression from commit 94bf4908a6661101c270ef647e33dde09f16ac08
"tdf#148799 DOCX import: fix invalid formulas with comma".

DOCX allows to set decimal symbol independently from the locale
of the document, so if the DOCX document uses comma, but
its locale ("language") has got a default decimal point in Writer,
Writer formulas must contain decimal points instead of commas,
otherwise automatic update of the formulas, e.g. moving text
cursor in the table, results ** Expression is faulty ** instead
of the recalculated value. The only way to get standard
Writer formulas is to replace the commas with points in numbers
in writerfilter, if document language has a default
decimal point in Writer.

Note: not only document language, but area setting of
LibreOffice installation modifies formula handling. I.e.
plain numbers recognized with comma only if area setting
is modified to a language, which uses decimal comma
(but formulas still need decimal points, if the language
of the document is a locale with default decimal point).
E.g. an en_US DOCX document with decimal comma, or a
de_DE document with decimal comma loaded correctly now,
but recognizing cell content with a single number with comma
needs to set also the correct area setting.

Change-Id: I16dba1e10bf4271a44c435b5b09345d8d698b91d
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/142611
Tested-by: Jenkins
Reviewed-by: László Németh <nemeth@numbertext.org>