sw/qa/extras/uiwriter/uiwriter6.cxx
@@ -2173,7 +2173,8 @@ CPPUNIT_TEST_FIXTURE(SwUiWriterTest6, testCaptionShape)
 
 CPPUNIT_TEST_FIXTURE(SwUiWriterTest6, testTdf148799)
 {
-    // load a document with table formulas with comman delimiter
+    // load a document with table formulas with comma delimiter,
+    // but with a document language with default point delimiter
     SwDoc* pDoc = createSwDoc(DATA_DIRECTORY, "tdf148799.docx");
     SwWrtShell* pWrtShell = pDoc->GetDocShell()->GetWrtShell();
     // check formula update
@@ -2192,6 +2193,33 @@ CPPUNIT_TEST_FIXTURE(SwUiWriterTest6, testTdf148799)
     CPPUNIT_ASSERT_EQUAL(OUString("2345"), xCellA3->getString());
     uno::Reference<text::XTextRange> xCellA4(xTextTable->getCellByName("D5"), uno::UNO_QUERY);
     CPPUNIT_ASSERT_EQUAL(OUString("23684.5"), xCellA4->getString());
+}
+
+CPPUNIT_TEST_FIXTURE(SwUiWriterTest6, testTdf151993)
+{
+    // load a document with table formulas with comma delimiter
+    // (with a document language with default comma delimiter)
+    SwDoc* pDoc = createSwDoc(DATA_DIRECTORY, "tdf151993.docx");
+    SwWrtShell* pWrtShell = pDoc->GetDocShell()->GetWrtShell();
+
+    // check formula update
+
+    // put cursor in the first table row
+    pWrtShell->Down(/*bSelect=*/false, /*nCount=*/1);
+
+    uno::Reference<text::XTextTablesSupplier> xTextTablesSupplier(mxComponent, uno::UNO_QUERY);
+    uno::Reference<container::XIndexAccess> xTables(xTextTablesSupplier->getTextTables(),
+                                                    uno::UNO_QUERY);
+
+    CPPUNIT_ASSERT_EQUAL(sal_Int32(1), xTables->getCount());
+
+    uno::Reference<text::XTextTable> xTextTable(xTables->getByIndex(0), uno::UNO_QUERY);
+
+    CPPUNIT_ASSERT_EQUAL(sal_Int32(2), xTextTable->getRows()->getCount());
+
+    // This was 0
+    uno::Reference<text::XTextRange> xCellA1(xTextTable->getCellByName("A2"), uno::UNO_QUERY);
+    CPPUNIT_ASSERT_EQUAL(OUString("30"), xCellA1->getString());
 }
 
 CPPUNIT_TEST_FIXTURE(SwUiWriterTest6, testTdf151462)
